2006-05-28  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* SelfUpdate.pm: Use hostnames specified in anonymous-cvs or
	developer-cvs if available

2006-05-24  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Use current hostname for cvs fallback

2006-05-17  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Notify/QuickSilver.pm, Notify/Say.pm: use different osascript syntax
	that's a bit cleaner; also fix QuickSilver to use the new dictionary
	signature

2006-04-27  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Revert Files fix (breaks "Files: foo/a foo")

2006-04-27  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Fix renaming of target file in Files field

2006-04-25  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Don't mkdir the Files target dir for every file copied

2006-04-20  Alexander Hansen  <alexkhansen@users.sourceforge.net>

	* Bootstrap.pm:	Add 10.4.6 to supported OS flavors.

2006-04-19  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Don't crash if apt-cache is not present

2006-04-16  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* NetAccess.pm: pass the checksum type when validating.

2006-04-10  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Validation.pm: Check for %{PatchScript} using the correct case.

2006-04-08  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Validation.pm: Validate PatchScript correctly even when file being
	validated is in the same directory from which 'fink validate' is 
	being run; also, recognize %{PatchScript} during validation no matter
	what its case.

2006-03-28  Daniel Macks  <dmacks@netspace.org>

	* Config.pm: Store architecture and debarch in $config object
	("Architecture" and "Debarch", not written to fink.conf) and
	remove exported $debarch. New method mixed_arch checks whether
	local machine matches $config arch.

	* Status.pm: Disable local dpkg when forging arch.

	* Package.pm: Disable saved pdb when forging arch.
